apps/web/radicale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radicale
spec:
  selector:
    app: radicale
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
