apps/web/radicale/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: web
  name: radicale
spec:
  entryPoints:
    - web
  routes:
    - match: ingress-route-match
      kind: Rule
      middlewares:
        - name: https-proto
      services:
        - name: radicale
          port: 80
